Dragged node links are invisible #94987

Closed
opened 2022-01-17 19:51:07 +01:00 by Hans Goudey · 22 comments
Member

System Information
Operating system: Linux-5.15.12-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46

Blender Version
Broken: version: 3.1.0 Alpha, latest master
Caused by: 9d3f35a0bf

Short description of error
When dragging a node link, it turns invisible

Exact steps for others to reproduce the error

  • Open default startup file
  • Go to the geometry nodes tab
  • Create a node group
  • Drag from a node socket to create a node link
  • It is invisible

I bisected this problem to 9d3f35a0bf, maybe there was a mistake in the revert revert?

**System Information** Operating system: Linux-5.15.12-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46 **Blender Version** Broken: version: 3.1.0 Alpha, latest master Caused by: 9d3f35a0bf1bf5776363bfd61d53a7c85b5827a4 **Short description of error** When dragging a node link, it turns invisible **Exact steps for others to reproduce the error** - Open default startup file - Go to the geometry nodes tab - Create a node group - Drag from a node socket to create a node link - It is invisible I bisected this problem to 9d3f35a0bf1bf5776363bfd61d53a7c85b5827a4, maybe there was a mistake in the revert revert?
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

#95036 was marked as duplicate of this issue

#95036 was marked as duplicate of this issue

#95002 was marked as duplicate of this issue

#95002 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

@Jeroen-Bakker, do you mind taking a look?

@Jeroen-Bakker, do you mind taking a look?

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Hans Goudey changed title from Dragged node links are invisisble to Dragged node links are invisible 2022-01-17 22:52:42 +01:00
Member

Added subscribers: @Vyach, @PratikPB2123

Added subscribers: @Vyach, @PratikPB2123
Jeroen Bakker was assigned by Dalai Felinto 2022-01-18 15:27:28 +01:00
Member

Ah yes will work on it tomorrow. Would assume it is related to drawing a single nodelink (none instance shader).

Ah yes will work on it tomorrow. Would assume it is related to drawing a single nodelink (none instance shader).

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

Added subscriber: @lajawi

Added subscriber: @lajawi

I can confirm this bug is also on Windows, Steam Daily version.

3.1.0 Alpha

Date: 2022-01-17 23:26
Hash: 54fb1a75ee19
Branch: Master```
I can confirm this bug is also on Windows, Steam Daily version. ```Blender 3.1.0 Alpha Date: 2022-01-17 23:26 Hash: 54fb1a75ee19 Branch: Master```

Added subscriber: @Baardaap

Added subscriber: @Baardaap

With developer extra's blender spits out this warning:

blender-git/blender/source/blender/gpu/opengl/gl_shader_interface.cc:376:30: runtime error: shift exponent -1 is negative
blender-git/blender/source/blender/gpu/opengl/gl_vertex_array.cc:77:28: runtime error: shift exponent -1 is negative

also since 9d3f35a0bf

With developer extra's blender spits out this warning: blender-git/blender/source/blender/gpu/opengl/gl_shader_interface.cc:376:30: runtime error: shift exponent -1 is negative blender-git/blender/source/blender/gpu/opengl/gl_vertex_array.cc:77:28: runtime error: shift exponent -1 is negative also since 9d3f35a0bf

This issue was referenced by 952a4fa456

This issue was referenced by 952a4fa4561986da467c16a04b1b23530df26b8d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This still occurs in this Blender version:

3.1.0 Alpha

Date: 2022-01-18 22:23
Hash: 2e5aecf557fb
Branch: master```
Although, now there's sometimes a visual glitch upon trying to connect the node link to another in-/output. A very small, line flickering, randomly, or, occured once on my pc, a thick stripe of different colours briefly flickering offset to the actual node link (didn't get it on screenshot or vid).
This still occurs in this Blender version: ```Blender 3.1.0 Alpha Date: 2022-01-18 22:23 Hash: 2e5aecf557fb Branch: master``` Although, now there's sometimes a visual glitch upon trying to connect the node link to another in-/output. A very small, line flickering, randomly, or, occured once on my pc, a thick stripe of different colours briefly flickering offset to the actual node link (didn't get it on screenshot or vid).
Member

@lajawi Please check the build date. Yours is from yesterday, the fix was added today.

@lajawi Please check the build date. Yours is from yesterday, the fix was added today.

In #94987#1291056, @Jeroen-Bakker wrote:
@lajawi Please check the build date. Yours is from yesterday, the fix was added today.

I just updated via Steam, and it still occured. I have the newest version available on Steam.

> In #94987#1291056, @Jeroen-Bakker wrote: > @lajawi Please check the build date. Yours is from yesterday, the fix was added today. I just updated via Steam, and it still occured. I have the newest version available on Steam.
Member

Steam hasn't been updated. That is done tonight around 2am.

Steam hasn't been updated. That is done tonight around 2am.

Good to know, thank you!

Good to know, thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94987
No description provided.