source/blender/gpu/GPU_shader_shared.h
@@ -34,7 +34,9 @@ using blender::float4x4;
 
 struct NodeLinkData {
   float4 colors[3];
-  float2 bezierPts[4];
+  /* bezierPts Is actually a float2, but due to std140 each element needs to be aligned to 16
+   * bytes. */
+  float4 bezierPts[4];
   bool1 doArrow;
   bool1 doMuted;
   float dim_factor;
